force-app/main/default/objects/CS_Attribution_POE__c/CS_Attribution_POE__c.object-meta.xml
<CustomObject>
    <label>CS Attribution</label>
    <nameField>
        <displayFormat>CSAtt-{000000}</displayFormat>
        <label>CS Attribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Attribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>