force-app/main/default/objects/CS_Attribution_POE__c/fields/createdAfterSpilit__c.field-meta.xml
<CustomField>
    <fullName>createdAfterSpilit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>createdAfterSpilit</label>
    <type>Checkbox</type>
</CustomField>