force-app/main/default/objects/CS_Attribution_POE__c/fields/createdPostSpilit__c.field-meta.xml
<CustomField>
    <fullName>createdPostSpilit__c</fullName>
    <formula>cs_OLI__r.isSplit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>createdPostSpilit</label>
    <type>Checkbox</type>
</CustomField>