force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_AddOn__c.field-meta.xml
<CustomField>
    <fullName>cs_AddOn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddOn</label>
    <referenceTo>AddOn__c</referenceTo>
    <relationshipLabel>CS Attribution</relationshipLabel>
    <relationshipName>CS_Attribution_POE</relationshipName>
    <type>Lookup</type>
</CustomField>