force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_attribution__c.field-meta.xml
<CustomField>
    <fullName>cs_attribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Attribution</label>
    <referenceTo>CS_Attribution_POE__c</referenceTo>
    <relationshipLabel>CS Attribution</relationshipLabel>
    <relationshipName>CS_Attribution_POE</relationshipName>
    <type>Lookup</type>
</CustomField>