force-app/main/default/objects/CS_Attribution_POE__c/fields/CS_Attribution_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_Attribution_Name__c</fullName>
    <formula>IF(ISPICKVAL(cs_Attribution_Type__c, &apos;Addon&apos;),HYPERLINK(&quot;/&quot;&amp;Id,Name+&apos;-&apos;+&apos;AddOn-&apos;+ cs_AddOn__r.AddOn_Name__c +&apos;--&apos;+cs_AddOn__r.RecordType.Name, &quot;_self&quot;),HYPERLINK(&quot;/&quot;&amp;Id,Name+&apos;-&apos;+cs_OLI__r.Name+&apos;-&apos;+TEXT(cs_Attribution_Type__c), &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Attribution Name</label>
    <type>Text</type>
</CustomField>