force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_Attribution_Type__c.field-meta.xml
<CustomField>
    <fullName>cs_Attribution_Type__c</fullName>
    <label>Attribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customisation</fullName>
            </value>
            <value>
                <fullName>OLI</fullName>
            </value>
            <value>
                <fullName>Addon</fullName>
            </value>
            <value>
                <fullName>Sub Option</fullName>
            </value>
            <value>
                <fullName>Dep Date HSS</fullName>
            </value>
            <value>
                <fullName>Dep City Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>