force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_cancellation_percentage__c.field-meta.xml
<CustomField>
    <fullName>cs_cancellation_percentage__c</fullName>
    <formula>ROUND((cs_cancelled_amount__c * 100)/(cs_original_sale_amount__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>