force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_cancelled_amount__c.field-meta.xml
<CustomField>
    <fullName>cs_cancelled_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancelled Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>