force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_OLI__c.field-meta.xml
<CustomField>
    <fullName>cs_OLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLI</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>CS Attribution</relationshipLabel>
    <relationshipName>cs_attribution_POE</relationshipName>
    <type>Lookup</type>
</CustomField>