force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_Order_Customisation__c.field-meta.xml
<CustomField>
    <fullName>cs_Order_Customisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Customisation</label>
    <referenceTo>Order_Customisations_POE__c</referenceTo>
    <relationshipLabel>CS Attribution</relationshipLabel>
    <relationshipName>CS_Attribution_POE</relationshipName>
    <type>Lookup</type>
</CustomField>