force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_original_sale_amount__c.field-meta.xml
<CustomField>
    <fullName>cs_original_sale_amount__c</fullName>
    <label>Original Sale Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>