force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>cs_Sale_Amount__c</fullName>
    <label>Sale Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>