force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_Sale_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cs_Sale_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Sale Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>