force-app/main/default/objects/CS_Attribution_POE__c/fields/cs_status__c.field-meta.xml
<CustomField>
    <fullName>cs_status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
                <default>true</default>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>