force-app/main/default/objects/CS_Attribution_POE__c/fields/New_Amount_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Amount_Date__c</fullName>
    <label>New Amount Date</label>
    <type>Date</type>
</CustomField>