force-app/main/default/objects/CS_Attribution_POE__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>CS Attribution</relationshipLabel>
    <relationshipName>CS_attribution_POE</relationshipName>
    <type>Lookup</type>
</CustomField>