force-app/main/default/objects/CS_Attribution_POE__c/fields/SplitOLI__c.field-meta.xml
<CustomField>
    <fullName>SplitOLI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SplitOLI</label>
    <type>Checkbox</type>
</CustomField>