force-app/main/default/objects/CS_Attribution_POE__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>CS Attribution</relationshipLabel>
    <relationshipName>CS_Attribution_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>