force-app/main/default/objects/CS_Attribution_POE__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CS_attribution_POE</relationshipName>
    <type>Lookup</type>
</CustomField>