force-app/main/default/objects/CS_Attribution_POE__c/fields/User_Attribution__c.field-meta.xml
<CustomField>
    <fullName>User_Attribution__c</fullName>
    <formula>New_Amount__c -  Original_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Attribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>