force-app/main/default/objects/CS_Attribution_POE__c/fields/User_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Change_Date__c</fullName>
    <label>User Change Date</label>
    <type>Date</type>
</CustomField>