force-app/main/default/objects/CS_Attribution_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cs_Attribution_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>cs_OLI__c</columns>
    <columns>cs_AddOn__c</columns>
    <columns>cs_Sale_Amount__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>cs_status__c</columns>
    <columns>Sold_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>