force-app/main/default/objects/CS_Attribution_POE__c/listViews/View_By_Consultant_Name_for_This_Month.listView-meta.xml
<ListView>
    <fullName>View_By_Consultant_Name_for_This_Month</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>cs_Sale_Amount__c</columns>
    <columns>cs_Attribution_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>View By Consultant Name for This Month</label>
</ListView>