force-app/main/default/objects/CS_Attribution_POE__c/listViews/View_Consultant_By_Last_Quarter.listView-meta.xml
<ListView>
    <fullName>View_Consultant_By_Last_Quarter</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>cs_Sale_Amount__c</columns>
    <columns>cs_Attribution_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_QUARTER</value>
    </filters>
    <label>View Consultant By Last Quarter</label>
</ListView>